# QTool

./: .gitmodules  LICENSE.md  README.md  build.gradle  common.gradle  settings.gradle
.github/workflows/: Auto_Build.yml  Test_Build.yml
ItemProcesser/: build.gradle
QQStub/: build.gradle
QQStub/src/main/: AndroidManifest.xml
QTool/: build.gradle  lint-baseline.xml  proguard-rules.pro
QTool/src/main/: AndroidManifest.xml
QTool/src/main/adfawhf/: CMakeLists.txt  biliroaming.cc
QTool/src/main/adfawhf/DexKitHelper/: CMakeLists.txt  dex_builder.cpp
QTool/src/main/assets/: loading.json  xposed_init
QTool/src/main/assets/www/: edit.html
QTool/src/main/java/bsh/: BshClassManager.java  BshMethod.java  Interpreter.java  NameSpace.java  TargetError.java  XThis.java
QTool/src/main/res/anim/: anim_fade_in.xml  anim_fade_out.xml
QTool/src/main/res/color/: selector_text_press_color.xml
QTool/src/main/res/drawable/: bg_round.xml  btnclick.xml  icon.xml  itemback.xml  menu_item_base.xml  menu_item_base2.xml  menu_item_round.xml  text_item_press.xml  textlines.xml
QTool/src/main/res/drawable-night/: icon.xml
QTool/src/main/res/layout/: activity_main.xml  activity_opensource.xml  adapter_zhihu_comment.xml  alarm_view.xml  base_activity_container.xml  base_main_menu.xml  base_menu_item.xml  chat_msg_panel.xml  child_item.xml  child_item_container.xml  dbcleaner_item.xml  emo_bundle_list.xml  emo_get_from_tg.xml  emo_list_panel.xml  emo_pic_container.xml  emo_pre_save.xml  emo_show_empty.xml  file_download.xml  item_checker_hook_item.xml  item_checker_main.xml  item_checker_show_detail.xml  join_save_item.xml  loading_progress.xml  main_menu.xml  menu_javaplugin.xml  menu_main.xml  open_source_item.xml  plugin_create_new.xml  plugin_inchat_menu.xml  plugin_inchat_menu_item.xml  (+15 more)
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
gradle/wrapper/: gradle-wrapper.properties
libs/: easy-adapte.aar  xpopup.aar
(+505 files in other folders)
